<resources>
    <string name="app_name">Contactwithfirebase</string>


    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone No.</string>
    <string name="className">Class</string>
    <string name="department">Department</string>
    <string name="institution">Institution</string>
    <string name="guardian_name">Guardian Name</string>
    <string name="guardian_phone_no">Guardian Phone No.</string>
    <string name="gender">Gender</string>
    <string name="profession">Select Your Profession</string>
    <string name="profile">Profile</string>
    <string name="teachers">Teachers</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="logout">Logout</string>
    <string name="list">List</string>
    <string name="search">Search</string>
    <string name="edit">Edit Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
</resources>
